--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,4 +28,6 @@ workflows:
       - hello:
         filters: *test-circle-ci-filter
       - sleep:
-        filters: *test-circle-ci-filter   
+        filters: *test-circle-ci-filter
+          requires:
+            - hello
